# StudyBot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  InfoERRORS.md  KNOWN_TEST_FAILURES.md  README.md  TODO.md  acronyms.md  brief.md  electron-builder.personal.yml  electron-builder.yml  generalRules.md  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: personal-build.yml  release-build.yml
Guides/: AI_Agent_Guideline_ACTAS_CMG_Scraping_Framework.md  FULL_EXTRACTION_PLAN.md  NOTABILITY_FORMAT_GUIDE.md  PILOT_CLEANING_SESSION.md  PIPELINE_AGENT_GUIDE.md  actas-qualifications-backfill.md  adding-a-service.md  at-cpg-extraction-findings.md  categories-at.md  loading-reliability-checklist.md  loading-reliability-implementation-plan.md  scope-of-practice-actas.md  scope-of-practice-at.md  standalone-packaging-macos-windows.md
config/: settings.example.json
design/: generate_icons.py
docs/: designer-brief-logo.md  project-audit-unfinished-work-2026-04-05.md  project-review-findings.md
scripts/: at_fix_missing.py  at_phase0_probe.py  at_scrape_all.py  at_scrape_utils.py  backfill_actas_qualifications.py  build_bundled_chroma.py  export-cmg-snapshot.py  migrate_to_multi_service.py  package-backend.ps1  package-backend.sh  upload-personal-data.sh  verify-backend-payload.ps1  verify-backend-payload.sh
src/electron/: main.js  preload.js
src/python/: main.py  paths.py  seed.py
src/renderer/: App.tsx
tests/llm/: test_anthropic_provider.py  test_factory.py  test_google_provider.py  (+2 more)
(+628 files in other folders)
